--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "^10.0.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.1",
     "react-grid-system": "^7.2.0",
     "react-icons": "^4.2.0"
