--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start",
-    "prepare": "mv out/_next out/assets && sed -i 's/\\/_next/\\/assets/g' out/**.html"
+    "start": "next start"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
