--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "prepare": "./scripts/prepare.sh"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
